Added references to buttons and moved the  random variable and computerSelection

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<script src="game.js" defer></script>
 </head>
 <body>
-	<button class="btn-1">Rock</button>
-	<button class="btn-2">Paper</button>
-	<button class="btn-3">Scissors</button>
+	<button id="btn1">Rock</button>
+	<button id="btn2">Paper</button>
+	<button id="btn3">Scissors</button>
 </body>
 </html>
