--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 	<button id="btn1">Rock</button>
 	<button id="btn2">Paper</button>
 	<button id="btn3">Scissors</button>
+	<div class="player-score"></div>
+	<div class="computer-score"></div>
 </body>
 </html>
