Added divs and changed some id's to classes to make it easier to style them

--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
 	<script src="game.js" defer></script>
 </head>
 <body>
-	<button id="btn1">Rock</button>
-	<button id="btn2">Paper</button>
-	<button id="btn3">Scissors</button>
-	<div class="player-score"></div>
-	<div class="computer-score"></div>
+	
+	<div id="header">
+		<h1>Start by chossing Rock, Paper or Scissors.</h1>
+	</div>
+
+	<div id="buttons">	
+		<button class="btn1">Rock</button>
+		<button class="btn2">Paper</button>
+		<button class="btn3">Scissors</button>
+		<div class="player-score"></div>
+		<div class="computer-score"></div>
+	</div>
+
+	<div id="reset-div">
+		<button class="reset-btn">Reset Game</button>
+	</div>
+
 </body>
 </html>
