--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" href="style.css">
-	<script src="game.js" defer></script>
-</head>
-<body>
-	
-	<div id="header">
-		<h1>Start by chossing Rock, Paper or Scissors.</h1>
-	</div>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <script src="game.js" defer></script>
+    </head>
+    <body>
+        <div id="header">
+            <h1>Click A Button To Begin The Game</h1>
+        </div>
+        
+        <div id="score">
 
-	<div id="buttons">	
-		<button class="btn1">Rock</button>
-		<button class="btn2">Paper</button>
-		<button class="btn3">Scissors</button>
-		<div class="player-score"></div>
-		<div class="computer-score"></div>
-	</div>
+        </div>
 
-	<div id="reset-div">
-		<button class="reset-btn">Reset Game</button>
-	</div>
-
-</body>
+        <div id="buttons">
+            <button class="btn1">Rock</button>
+            <button class="btn2">Paper</button>
+            <button class="btn3">Scissors</button>
+            <button class="reset-btn">Reset</button>
+        </div>
+    </body>
 </html>
