wrote code to display player and computer score

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
         </div>
 
+        <div id="score-text">
+            
+        </div>
+
         <div id="buttons">
             <button class="btn1">Rock</button>
             <button class="btn2">Paper</button>
